Fix tooltip z-index. Fixes #998

--- a/app/stylesheets/builtin-pages/components/tooltip.less
+++ b/app/stylesheets/builtin-pages/components/tooltip.less
@@ -6,7 +6,7 @@
     &:before,
     &:after {
       display: block;
-      z-index: 3;
+      z-index: 1000;
       transition: opacity .01s ease;
       transition-delay: .2s;
     }
